--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ Not only that, but your liver also acts as <strong>the Fat-Burning Machine</stro
         <div class="row justify-content-center">
             <div class="col-12 col-lg-7">
                 <div class="image-wrapper">
-                    <img src="assets/images/livpurelogodark.webp" alt="Liv Pure Logo">
+                    <img src="assets/images/livPureLogoDark.webp" alt="Liv Pure Dark Logo">
                     
                 </div>
             </div>
